--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
     "mysql": "^2.18.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "typeorm": "0.2.26"
+    "typeorm": "0.2.26",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "7.5.1",
     "@nestjs/schematics": "7.1.2",
     "@nestjs/testing": "7.4.4",
     "@types/express": "4.17.8",
-    "@types/node": "12.12.31",
+    "@types/node": "^14.11.5",
     "@types/supertest": "2.0.10",
     "@typescript-eslint/eslint-plugin": "4.2.0",
     "@typescript-eslint/parser": "4.2.0",
