--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
     "incremental": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": "src",
   },
   "include": ["src/**/*", "scripts/**/*"]
 }
