--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nest-typescript-starter",
+  "name": "test-genesis-weather",
   "version": "1.0.0",
-  "description": "Nest TypeScript starter repository",
+  "description": "test-genesis-weather",
   "license": "MIT",
   "scripts": {
-    "b": "ts-node ./scripts/fetchData.ts",
+    "seeds": "ts-node ./scripts/seedDb/seedDb.ts",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -25,8 +25,10 @@
     "@nestjs/platform-express": "7.4.4",
     "@nestjs/typeorm": "7.1.4",
     "axios": "^0.20.0",
+    "class-validator": "^0.12.2",
     "countries-list": "^2.5.6",
     "fs": "^0.0.1-security",
+    "mariadb": "^2.4.2",
     "mysql": "^2.18.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
@@ -38,6 +40,7 @@
     "@nestjs/schematics": "7.1.2",
     "@nestjs/testing": "7.4.4",
     "@types/express": "4.17.8",
+    "@types/jest": "^26.0.14",
     "@types/node": "^14.11.5",
     "@types/supertest": "2.0.10",
     "@typescript-eslint/eslint-plugin": "4.2.0",
@@ -48,7 +51,7 @@
     "jest": "26.4.2",
     "prettier": "2.1.2",
     "supertest": "5.0.0",
-    "ts-jest": "26.4.0",
+    "ts-jest": "^26.4.1",
     "ts-loader": "8.0.4",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "3.9.0",
